<resources>
    <string name="app_name">Smart City</string>
    <string name="Enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="notes">notes</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_notes">Add Notes</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="title">Title</string>
    <string name="email_password_incorrect">The email or password is incorrect!</string>
    <string name="title_activity_maps">Map</string>
    <string name="LoginData">LoginData</string>
    <string name="Logout">logout</string>
    <string name="Map">Map</string>
    <string name="gps_not_granted">GPS permission not granted</string>
    <string name="new_incidence">New incidence added!</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="mark_was_deleted">Mark was deleted!</string>
    <string name="add_marker">Add marker</string>
    <string name="traffic_problem">Traffic problem</string>
    <string name="add">Add</string>
    <string name="do_you_want_to_modify_marker">Do you want to modify marker?</string>
    <string name="edit_marker">Edit marker</string>
    <string name="mark_was_updated">Marker was updated</string>
    <string name="solved">solved</string>
    <string name="any_field_was_changed">Any field was changed</string>
    <string name="driving">Driving</string>
    <string name="add_image">Add Image</string>
    <string name="is_free_falling">Is free falling</string>
    <string name="violent_movement">Violent movement</string>
    <string name="is_dark">Is dark</string>
    <string name="geofences_not_added">Geofences not added</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofence_not_available">Geofence not available</string>
    <string name="geofence_too_many_geofences">Too many geofences</string>
    <string name="geofence_too_many_pending_intents">To many pending intents</string>
    <string name="unknown_geofence_error">unkwown geofence error</string>
    <string name="geofences_removed">geofences removed</string>
    <string name="geofences_not_removed">geofences not removed</string>
    <string name="geofence_transition_invalid_type">geofence transition invalid type</string>
    <string name="geofence_unknown_error">geofence unknown error</string>
    <string name="geofence_permissions_granted">Geofence Permissions Granted</string>
    <string name="geofence_permissions_denied">Geofence Permissions Denied</string>
    <string name="entered_danger_zone">Be careful, you have entered a danger zone!</string>
    <string name="out_danger_zone">You are out of danger zone</string>
    <string name="danger_zone">Danger zone</string>
</resources>